2005-10-08  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_font_options.c: Fixed a typo.

	* setup.rb: Added workaround for an error on Win32 platform.
	  Patch from Masao Mutoh <mutoh@highway.ne.jp>. Thanks!

	* packages/cairo/ext/rb_cairo_font_options.c: Implemented
	  cairo_font_options_t.
	* packages/cairo/ext/rb_cairo_surface.c: ditto.
	* packages/cairo/ext/rb_cairo.c: ditto.
	* packages/cairo/ext/rb_cairo.h: ditto.
	* packages/cairo/ext/cairo.def: ditto.
	* packages/cairo/lib/cairo.rb: ditto.

2005-10-07  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext: Added c-mode style configuration header for
	  Emacs.

	* samples/png.rb: Use Cairo::SurfaceImage instead of
	  Cairo::Surface.

	* packages/cairo/ext/rb_cairo_surface.c: Implemented
	  cairo_surface_t.

	* packages/cairo/ext/rb_cairo_exception.c: Sorted "case" in the
	  order of declaration cairo_status_t in cairo.h.

2005-10-06  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/extconf.rb: Fixed Win32 platform problem.
	  Patch from Masao Mutoh <mutoh@highway.ne.jp>. Thanks!

2005-10-04  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo.h: Support Win32 platform.

	* packages/cairo/ext/extconf.rb: ditto.

	* packages/cairo/ext/cairo.def: Added.

	* packages/cairo/ext/pkg-config.rb: Added. This file is from
	  Ruby/GLib.

2005-10-01  Kouhei Sutou  <kou@cozmixng.org>

	* setup.rb: update to 3.4.0.

2005-09-30  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/lib/cairo.rb: change indentation style to
	  style of ruby-mode.el.

	* README: update dependencies.

	* packages/gtkcairo, packages/svgcairo: remove.

	* setup.rb: update to 3.3.1.

2005-09-29  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/extconf.rb: check modversion.
	* packages/svgcairo/ext/extconf.rb: ditto.

2005-09-13  Øyvind Kolås  <pippin@gimp.org>

	Patch from Kouhei Sutou

	* packages/cairo/ext:
	  - add (or rename) internal (static) functions to 'cr_XXX' prefix.
	  - XXX_v -> rb_XXX